# UglyContainers

./: .gitignore  Doxygen.conf  README.md  Todo.md  project.yml  project_x86.yml  rakefile.rb  test_queue.out.stackdump
.github/workflows/: AllTests.yml  Coverage.yml  Doxygen.yml  FunctionalTests.yml  RunTests.yml  build.yml
list/src/: dlist.c
options/: debug.yml  release.yml
queue/inc/: queue.h
queue/projects/libQueue/Release/: objects.list  sources.mk
queue/projects/libQueue/Release_Static/: makefile
queue/projects/testQueue/: containers.elf.launch  containers.launch  queueTest Debug.launch
queue/projects/testQueue/Debug/: makefile  objects.list  queueTest.list
queue/src/: queue.c
queue/static/: CMakeLists.txt
queue/static/inc/: queue.h  squeue.h  uqueue.h
queue/static/src/: queue.c  squeue.c  uqueue.c
queue/static/tests/: test_queue.c  test_squeue.c  test_static_queue.c  test_uqueue.c
queue/tests/: test_queue.c
set/inc/: uqueue.h
set/src/: uqueue.c
set/tests/: test_uqueue.c
src/: config.h  contants.h  main.c  status_codes.h
src/algorithms/: algorithms.c  algorithms.h
src/algorithms/equal/: equal.c  equal.h  uc_equal.c  uc_equal.h
src/algorithms/iterator/: iterator.c  iterator.h
src/algorithms/msc/: msc.c  msc.h
src/algorithms/sort/: sort.c  sort.h  uc_sort.c  uc_sort.h
src/algorithms/transformation/: transformation.c  transformation.h  uc_transformation.c  uc_transformation.h
src/common/: contants.h  uc_assert.h  uc_error.h
src/core/: allocator_if.c  allocator_if.h  container.c  container.h
src/core/linked_list/: linked_list.c  linked_list.h
src/core/ll/: ll.c  ll.h
src/core/sll/: sll.c  sll.h
src/core/vector/: vector.c  vector.h
src/interface/: allocator_if.c  allocator_if.h
src/list/: dlist.h
src/queue/: queue.c  queue.h
src/structs/: ds.h
src/structs/bst/: bst.c  bst.h
src/structs/bt/: bt.c  bt.h
src/structs/queue/: queue.c  queue.h
src/structs/rb/: ring_buffer.c  ring_buffer.h
src/structs/set/: set.c  set.h
src/structs/stack/: stack.c  stack.h
src/support/allocator/: custom_allocator.c  custom_allocator.h
src/vector/: vector.c  vector.h
stack/static/inc/: stack.h
stack/static/src/: stack.c
stack/static/tests/: test_stack.c
test/: test_queue.c  test_vector.c
test/src/algorithms/equal/: test_Alg_Equal_TestSuite1.c  test_Alg_Equal_TestSuite2.c  test_Alg_Equal_TestSuite3.c  test_Alg_Equal_TestSuite4.c
test/src/algorithms/msc/: test_to_array_TestSuite1.c
test/src/algorithms/sort/: test_Alg_Sort_TestSuite1.c
test/src/algorithms/transformation/: test_Alg_Transformation_TestSuite0.c  test_Alg_Transformation_TestSuite1.c  test_Alg_Transformation_TestSuite2.c  test_Alg_Transformation_TestSuite3.c  test_Alg_Transformation_TestSuite4.c  test_Alg_Transformation_TestSuite5.c  test_Alg_Transformation_TestSuite6.c  test_Alg_Transformation_TestSuite7.c
test/src/core/: QAdlist.c
test/src/core/container/: test_container_TestSuite1.c  test_container_TestSuite2.c
test/src/core/linked_list/: test_linkedlist_TestSuite1.c  test_linkedlist_TestSuite2.c  test_linkedlist_TestSuite3.c  test_linkedlist_TestSuite4.c  test_linkedlist_TestSuite5.c  test_linkedlist_TestSuite6.c  test_linkedlist_TestSuite7.c  test_linkedlist_TestSuite8.c  test_linkedlist_TestSuite9.c  test_ll.c
test/src/core/vector/: test_vector_TestSuite1.c  test_vector_TestSuite2.c  test_vector_TestSuite3.c  test_vector_TestSuite4.c  test_vector_TestSuite5.c  test_vector_TestSuite6.c  test_vector_TestSuite7.c  test_vector_TestSuite8.c  test_vector_TestSuite9.c
test/src/structs/bst/: test_bst_TestSuite1.c  test_bst_TestSuite2.c  test_bst_TestSuite3.c  test_bst_TestSuite4.c  test_bst_TestSuite5.c
test/src/structs/queue/: test_queue_TestSuite1.c  test_queue_TestSuite2.c  test_queue_TestSuite3.c  test_queue_TestSuite4.c  test_queue_TestSuite5.c  test_queue_TestSuite6.c
test/src/structs/rb/: test_rb_TestSuite1.c  test_rb_TestSuite2.c  test_rb_TestSuite3.c  test_rb_TestSuite5.c
test/src/structs/set/: test_set_TestSuite1.c  test_set_TestSuite5.c
vector/: CMakeLists.txt
vector/inc/: vector.h
vector/projects/testVector/Debug/: makefile  objects.list  sources.mk  vectorTest.list
vector/projects/testVector/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
vector/projects/testVector/Debug/Middleware/Containers/src/: subdir.mk
vector/projects/testVector/Debug/Middleware/Containers/tests/: subdir.mk
vector/projects/testVector/Debug/Middleware/Debug/Src/: subdir.mk
vector/projects/testVector/Debug/Src/: subdir.mk
vector/src/: vector.c
vector/tests/: test_vector.c
(+56 files in other folders)
